--- a/skypro-music/src/App.css
+++ b/skypro-music/src/App.css
@@ -1,7 +1,8 @@
-.App {
-  text-align: center;
-}
-
 .text {
-  color: red
+  height: 250px;
+  color: red;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
 }
