--- a/skypro-music/src/App.css
+++ b/skypro-music/src/App.css
@@ -14,7 +14,7 @@
 a,
 a:visited {
   text-decoration: none;
-  font-family: "StratosSkyeng", sans-serif;
+  font-family: "StratosSkyeng";
   cursor: pointer;
 }
 
@@ -40,7 +40,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  font-family: "StratosSkyeng", sans-serif;
+  font-family: "StratosSkyeng";
   color: #ffffff;
 }
 
